--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "commander": "^6.1.0",
+    "ini": "^1.3.5",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20"
   }
