--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend-project-lvl-2",
   "version": "0.0.1",
   "description": "Compares two configuration files and shows a difference.",
-  "main": "src/differences.js",
+  "main": "src/index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
