--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,10 @@ env:
 
 extends: 
   - 'airbnb-base'
+  - 'plugin:fp/recommended'
+
+plugins:
+  - 'fp'
 
 parserOptions:
   ecmaVersion: 11
@@ -12,4 +16,6 @@ parserOptions:
 rules: {
   no-console: 0,
   import/extensions: 0,
+  fp/no-throw: 0,
+  fp/no-nil: 0,
 }
