fix lint config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,6 +15,7 @@ parserOptions:
 
 rules: {
   no-console: 0,
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }],
   import/extensions: 0,
   fp/no-throw: 0,
   fp/no-nil: 0,
